# try_from_ref

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  rustfmt.toml
examples/: example.rs
src/: attrs.rs  ir.rs  item.rs  lib.rs  utils.rs
tests/ui/: missing-err.rs  missing-err.stderr  missing-source.rs  missing-source.stderr  source-atrr-wrong-context.rs  source-atrr-wrong-context.stderr  too-many-args.rs  too-many-args.stderr
